# test-task-Smedia

./: README.md  main.py  pyproject.toml  schema.sql
app/: bot.py  config.py  db.py  schedulers.py  schemas.py
