
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tamara.savadyan", email = "tamara.savadyan@mail.ru"},
]
dependencies = [
    "pyrogram>=2.0.106",
    "asyncpg>=0.28.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "apscheduler>=3.10.4",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
